<?xml version="1.0"?>
<package format="2">
  <name>base_info</name>
  <version>0.0.0</version>
  <description>The base_info package</description>

  
  <maintainer email="ls@todo.todo">ls</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>


</package>
