<?xml version="1.0"?>
<package format="2">
  <name>wind_zmq</name>
  <version>1.12.0</version>
  <description>wind_zmq</description>

  <maintainer email="windzu1@gmail.com">windzu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>roscpp</depend>
  <depend>roslib</depend>

</package>
